--- a/src/test.html
+++ b/src/test.html
@@ -3,12 +3,13 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="${stylePath}/css/079380cf.test.css"/>
+    <link rel="stylesheet" href="css/test.css"/>
 </head>
 <body>
 
+<img src="img/img.jpg">
 <h1 class="no">123</h1>
 
-<script src="fa858f14.jquery.js"></script>
+<script src="jquery.js"></script>
 </body>
 </html>
